objects/FR_Commitment__c.object
<CustomObject>
    <fields>
        <fullName>Account_CSM_Email__c</fullName>
        <label>Account_CSM_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>FR_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Details__c</fullName>
        <inlineHelpText>Please describe the use case or use cases in scope of this particular commitment. It is best to align with Genesys use cases.</inlineHelpText>
        <label>Use Case Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FR_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Generated_ID__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Auto Generated ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Commitment_Delivery_Date__c</fullName>
        <inlineHelpText>Promise date to customer for availability of what has been requested through the FR; may be before or after the Opportunity Close date but note that a future promise for a feature could delay revenue recognition.</inlineHelpText>
        <label>Requested Delivery Date?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commitment_Incremental_Value__c</fullName>
        <inlineHelpText>The value expected as a direct result of the availability of what’s been described in the FR – enter a number in $US.</inlineHelpText>
        <label>Commitment Incremental Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Justification__c</fullName>
        <inlineHelpText>Please provide the justification for this customer commitment request.</inlineHelpText>
        <label>Commitment Justification</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commitment_Penalty__c</fullName>
        <inlineHelpText>Indicate any penalty amount that’s been written into a contract– enter a number in $US. This field may be left blank.</inlineHelpText>
        <label>Commitment Penalty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commitment_Progress__c</fullName>
        <label>Commitment Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under Evaluation</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Lost Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Commitment_Value__c</fullName>
        <inlineHelpText>The dollar value expected overall from the opportunity associated with the Feature Request – enter a number in $US</inlineHelpText>
        <label>Estimated ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_for_more_details__c</fullName>
        <inlineHelpText>Who should we contact to ask for more details?</inlineHelpText>
        <label>Contact for more details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FR_Description__c</fullName>
        <inlineHelpText>This is the place for your notes, comments, concerns, considerations, clarifications, details and any other information, which will help understand the context of this customer commitment request.</inlineHelpText>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FR_EU_Account__c</fullName>
        <formula>FR__r.End_User_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FR End User Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_PM_Owner_Email__c</fullName>
        <description>used in email notifications</description>
        <label>FR PM Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FR_PM_Owner__c</fullName>
        <formula>FR__r.PMOwnerNew__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FR PM Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Sold_To_Account__c</fullName>
        <formula>FR__r.Sold_To_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FR Sold To Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Status__c</fullName>
        <formula>TEXT(FR__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FR Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR_Subject__c</fullName>
        <formula>FR__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FR Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FR</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Case.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Genesys_Cloud_Feature_Request</value>
            </filterItems>
            <filterItems>
                <field>Case.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Genesys_Feature_Request_Case</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipName>FR_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Solution_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Solution Design</label>
        <referenceTo>New_Solution_Design__c</referenceTo>
        <relationshipLabel>Field Customer Commit Requests</relationshipLabel>
        <relationshipName>Field_Customer_Commit_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.OpportunityNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>FR_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oppty_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Oppty_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needed to close to deal</fullName>
                </value>
                <value>
                    <fullName>Can close the deal but needed within 1-2 years of implementation</fullName>
                </value>
                <value>
                    <fullName>Nice to have</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Manager_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://genesyslab.sharepoint.com/sites/releasemgmt/2018%20Product%20Taxonomy%20Ownership/Home.aspx?slrid=f1988b9e-70e6-7000-45ef-c91cb0aab1d8&quot; , &quot;Click to view the project manager info&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Manager Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Need help selecting the appropriate Product Manager? Click on the “Product Managers List” link under the blue Custom Links section on the left pane of your screen.</inlineHelpText>
        <label>Product Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>FR_Commitments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Service__c</fullName>
        <label>Product/Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>SOW-127-Speech Analytics (GIA)</fullName>
                </value>
                <value>
                    <fullName>SOW-129-IVR Recording</fullName>
                </value>
                <value>
                    <fullName>SOW-130-PureEngage API: Provisioning</fullName>
                </value>
                <value>
                    <fullName>SOW-131-PureEngage APIs: Statistics</fullName>
                </value>
                <value>
                    <fullName>SOW-132-PureEngage APIs: Workspace API / Voice</fullName>
                </value>
                <value>
                    <fullName>SOW-133-IVR PaaS</fullName>
                </value>
                <value>
                    <fullName>SOW-134-Open-Internet-Connected Agents</fullName>
                </value>
                <value>
                    <fullName>SOW-135-WebRTC Media Service</fullName>
                </value>
                <value>
                    <fullName>SOW-136-Cloud Data Download Service: UCS</fullName>
                </value>
                <value>
                    <fullName>SOW-137-IVR PaaS w/Intelligent Automation</fullName>
                </value>
                <value>
                    <fullName>SOW-138-Ready-to-Use Chat w/Designer</fullName>
                </value>
                <value>
                    <fullName>SOW-139-Ready-to-Use Email w/Designer</fullName>
                </value>
                <value>
                    <fullName>SOW-140-Co-browse</fullName>
                </value>
                <value>
                    <fullName>SOW-141-Knowledge Center</fullName>
                </value>
                <value>
                    <fullName>SOW-142-CX Contact</fullName>
                </value>
                <value>
                    <fullName>SOW-143-Device Management</fullName>
                </value>
                <value>
                    <fullName>SOW-144-Performance DNA</fullName>
                </value>
                <value>
                    <fullName>SOW-145-PureEngage APIs: Agent Chat</fullName>
                </value>
                <value>
                    <fullName>SOW-146-Omni-channel Applications w/ Designer</fullName>
                </value>
                <value>
                    <fullName>SOW-147-Predictive Routing w/Designer</fullName>
                </value>
                <value>
                    <fullName>SOW-148-MicroApps w/Designer</fullName>
                </value>
                <value>
                    <fullName>SOW-149-Contextual Routing</fullName>
                    <label>SOW-149-Context Routing</label>
                </value>
                <value>
                    <fullName>SOW-150-Altocloud Predictive Engagement</fullName>
                </value>
                <value>
                    <fullName>SOW-151-Chatbots</fullName>
                </value>
                <value>
                    <fullName>SOW-152-Mobile Callback (GES Callback)</fullName>
                </value>
                <value>
                    <fullName>SOW-153-Task Routing</fullName>
                </value>
                <value>
                    <fullName>SOW-154-HITRUST</fullName>
                </value>
                <value>
                    <fullName>SOW-155	Voice Bots</fullName>
                </value>
                <value>
                    <fullName>SOW-156-Mobile Click-to-Call</fullName>
                </value>
                <value>
                    <fullName>SOW-157-Dialog Engine NLU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Contract_Value__c</fullName>
        <formula>Opportunity__r.Total_Annual_Contract_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_On_Premise_Amount__c</fullName>
        <formula>Opportunity__r.Total_On_Premise_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total On Premise Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Field Customer Commit Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Commitment_Progress__c</columns>
        <columns>FR__c</columns>
        <columns>FR_EU_Account__c</columns>
        <columns>Commitment_Value__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Oppty_Stage__c</columns>
        <columns>Oppty_Close_Date__c</columns>
        <columns>Commitment_Delivery_Date__c</columns>
        <columns>FR_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FCCR-{0000}</displayFormat>
        <label>Commitment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Customer Commit Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Commitment_stage_rule</fullName>
        <active>true</active>
        <description>Commitment stage can be updated to accepted only by certain profiles</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &apos;PM (All)&apos;,
$Profile.Name &lt;&gt; &apos;Product Management View All &apos;,
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Data Administrator&apos;,
$Profile.Name &lt;&gt; &apos;Product Manager&apos;,
ISPICKVAL( Commitment_Progress__c  , &apos;Accepted&apos;)
)</errorConditionFormula>
        <errorMessage>&apos;You are not permitted to change Commitment stage to Accepted&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Commitment_Stage_Update</fullName>
        <active>true</active>
        <description>Restrict_Commitment_Stage_Update_To_Lost_Opportunity</description>
        <errorConditionFormula>AND(
ISCHANGED(Commitment_Progress__c),(TEXT(Commitment_Progress__c)=&apos;Lost Opportunity&apos;),
NOT(OR(
CONTAINS($Profile.Name, &apos;System Administrator&apos;),
CONTAINS($Profile.Name, &apos;Data Administrator&apos;),
$User.BypassValidationRules__c
)))</errorConditionFormula>
        <errorMessage>Users can&apos;t update Commitment Stage to Lost Opportunity. Please select any other value.</errorMessage>
    </validationRules>
</CustomObject>